Addressing intellij code analysis issues